# Finance-Tracker

./: SECURITY.md  dummy_data.csv
Backend/: .env.example  .gitignore  auth.py  categorization.py  database.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
Frontend/: package-lock.json  package.json
Frontend/app/: layout.tsx  page.tsx
Frontend/app/dashboard/: page.tsx
Frontend/app/login/: page.tsx
Frontend/components/: query-provider.tsx  theme-toggle.tsx
Frontend/components/dashboard/: analytics-charts.tsx  dashboard-cards.tsx  data-table.tsx  file-uploader.tsx  transaction-form.tsx  transactions-column.tsx
Frontend/components/layout/: dashboard-header.tsx  dashboard-sidebar.tsx  navbar.tsx
Frontend/components/ui/: badge.tsx
Frontend/lib/: api.ts  utils.ts
Frontend/types/: transaction.ts
project/: middleware-nouse.ts
project/app/: layout.tsx
project/app/dashboard/: page.tsx
project/app/login/: page.tsx
project/backend/: .env  auth.py  fintrack.db  main.py  schemas.py
project/components/dashboard/: analytics-charts.tsx  dashboard-cards.tsx  data-table.tsx  transactions-column.tsx
project/components/layout/: dashboard-sidebar.tsx
project/lib/: api.ts  utils.ts
